Resolve duplicate externs. Bernd (someone with Solaris) please test.

BUG: 124416
BUG: 114747
CCMAIL: bernd.kuhls@informatik.uni-oldenburg.de

svn path=/branches/KDE/3.5/kdelibs/; revision=550555