kdecore/ksycoca.cpp
@@ -43,7 +43,10 @@
 #endif
 
 #ifdef Q_OS_SOLARIS
-extern "C" extern int madvise(caddr_t, size_t, int); 
+extern "C" 
+{
+	extern int madvise(caddr_t, size_t, int); 
+}
 #endif
 
 #ifndef MAP_FAILED
